replace commons-io with plain java